fix: remove z-index from code copy (#1077)

--- a/src/theme-src/css/code.css
+++ b/src/theme-src/css/code.css
@@ -25,7 +25,7 @@ pre {
     @apply block pl-4 py-4 overflow-x-auto;
   }
   & .copy {
-    @apply absolute top-3 right-1.5 border p-1 uppercase select-none text-xs tracking-wide rounded-sm text-gray-700 bg-white opacity-0 focus:opacity-100 transition-all duration-500 transform active:translate-x-0.5 active:translate-y-0.5 z-10;
+    @apply absolute top-3 right-1.5 border p-1 uppercase select-none text-xs tracking-wide rounded-sm text-gray-700 bg-white opacity-0 focus:opacity-100 transition-all duration-500 transform active:translate-x-0.5 active:translate-y-0.5;
   }
 
   &:hover .copy {
